# SISOP-LISSANDRA-TP

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tp-2019-1c-Gank-mid.cbp
ConfigMemoria/: config1.txt  config2.txt  config3.txt  config4.txt
ConfigMemoria/base/: config1.txt  config2.txt
ConfigMemoria/kernel/: config1.txt  config2.txt  config3.txt  config4.txt
ConfigMemoria/lfs/: config1.txt  config2.txt  config3.txt
ConfigMemoria/memoria/: config1.txt
ConfigMemoria/stress/: config1.txt  config2.txt  config3.txt  config4.txt  config5.txt
FileSystem/: CMakeLists.txt  FileSystem  Makefile  README.md  cmake_install.cmake
FileSystem/src/: FileSystem.c  FileSystem.h
FileSystem/src/comandos/: comandos.c  comandos.h
FileSystem/src/config/: .config.txt.swp  Config_filesystem.c  Config_filesystem.h  config.txt
FileSystem/src/setup/: setup.c  setup.h
FileSystem/src/utils/: compactator.c  compactator.h  freeBlocksFromFS.c  freeBlocksFromFS.h  getterValuesFromFS.c  getterValuesFromFS.h  memtableHandler.c  memtableHanlder.h  semaphores.h  tablesHandler.c  tablesHandler.h  utils.c  utils.h
Kernel/: CMakeLists.txt  Kernel  Makefile  README.md  cmake_install.cmake
Kernel/src/: CMakeLists.txt  Kernel.c  Kernel.h
Kernel/src/api/: api.c  api.h
Kernel/src/comandos/: comandos.c  comandos.h
Kernel/src/config/: Config_kernel.c  Config_kernel.h  config.txt
Kernel/src/criterios/: criterios.c  criterios.h
Kernel/src/memoria/: memoria.c  memoria.h
Kernel/src/metadata/: metadata.c  metadata.h
Kernel/src/metricas/: metricas.c  metricas.h
Kernel/src/tads/: script.c  script.h
Kernel/test/: CMakeLists.txt  KernelTests  Makefile  Run_Kernel_Tests.c  Run_Kernel_Tests.h  cmake_install.cmake
Kernel/test/Test_Criterio/: Test_Criterio.c  Test_Criterio.h
Kernel/test/Test_Memoria/: Test_Memoria.c  Test_Memoria.h
Kernel/test/Test_Metadata/: Test_Metadata.c  Test_Metadata.h
Librerias/: CMakeLists.txt  Makefile  cmake_install.cmake
Librerias/commons/: log.h
Librerias/commonsfunctions/: functions.c  functions.h
Librerias/parser/: parser.c  parser.h
Librerias/serializador/: estructuras.c  estructuras.h  handshake.h  serializador.c  serializador.h
Librerias/servidor/: servidor.c
Memoria/: CMakeLists.txt  Makefile  Memoria  cmake_install.cmake
Memoria/src/: Memoria.c  Memoria.h  comandosMemoria.c  comandosMemoria.h
Memoria/src/comandos/: comandos.c  comandos.h
Memoria/src/config/: Config_memoria.c  Config_memoria.h  config.txt  config1.txt  config2.txt  config3.txt
Memoria/src/estructuras/: gossip.c  gossip.h  marcos.c  marcos.h  paginas.c  paginas.h  segmentos.c  segmentos.h
TestScripts/: script1.txt  script2.txt  scriptTest.txt
